kubernetes/linus/03-ingress.yml
# 03-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microblog
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - lisd22-devops.me
    secretName: demo-tls
  rules:
  - host: lisd22-devops.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: microblog
            port:
              number: 80
